# kernel-eval-protocol-quickstart

./: .env.example  .gitignore  README.md  kernel_browser_rollout_processor.py  pyproject.toml  requirements.txt  tasks.jsonl  test_agent_auth.py
agent_auth/: config.py
core/: agent.py  browser.py  tracking.py  utils.py
core/reward_models/: webjudge.py
